--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,14 @@
+DEBUG=True
+
+DJANGO_EMAIL_HOST=
+DJANGO_EMAIL_TLS=
+DJANGO_EMAIL_PORT=
 DJANGO_EMAIL_USER=
 DJANGO_EMAIL_PASSWORD=
-DJANGO_EMAIL_PORT=
-DJANGO_EMAIL_TLS=
-DJANGO_EMAIL_HOST=
+DJANGO_DEFAULT_FROM_EMAIL=
 
-DB_NAME=
-DB_USER=
-DB_PASS= 
-DB_HOST=
-DB_PORT=
+DB_NAME=postgres
+DB_USER=admin
+DB_PASS=docker123
+DB_HOST=localhost
+DB_PORT=5432
