--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 django>=3.1.8, <3.2.0
-pylint==2.4.4
-psycopg2-binary==2.8.4
-django-environ==0.4.5
-python-decouple==3.3
-django-bootstrap4==1.1.1
-openpyxl==2.6.0
+pylint>=2.4.4, <2.5.0
+psycopg2-binary>=2.8.4, <2.9.0
+django-environ>=0.4.5, <0.5.0
+python-decouple>=3.3, <3.4.0
+django-bootstrap4>=1.1.1, <1.2.0
+openpyxl>=2.6.0, <2.7.0
